--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -92,6 +92,7 @@ ul {
 
 a {
   text-decoration: none;
+  color:var(--text-color);
 }
 
 img {
@@ -109,7 +110,7 @@ img {
 }
 /*================Reusable css classes=============*/
 .section {
-  padding: 1rem 0 1rem;
+  padding: 1rem;
 }
 
 .section__title {
